css/style.css
/* ... */
/* ========================= ABOUT ========================= */

.section__subtitle--container--skills {
    display: grid;
    grid-template-columns: repeat(2, minmax(120px, 200px));
}
.section__subtitle--container--skills li::before {
    content: "✫";
    position: relative;
    left: 0;
    color: var(--clr-accent);
    font-size: 10px;
    line-height: 15px;
    padding: 12px 12px;
}

/* ========================= EXPERIENCES ========================= */

.my-experiences {
    position: relative;
    margin: 0 auto;
    max-width: 900px;
}
.tabs {
    display: block;
    position:relative;
    max-width:700px;
    height: 55vh;
    padding: 0;
}
.tabs .tab-header > div:hover,.tabs .tab-header > div.active {
    color:var(--clr-accent);
}
.tabs .tab-header {
    display: flex;
    flex-direction: column;
    overflow: hidden;
}
.tabs .tab-content {
    position:relative;
    height:100%;
    overflow-x: scroll;
}
.tabs .tab-content > div.active {
    top:0;
    transform: scale(1);
}
.section__subtitle--container li::before {
    content: "✫";
    position: relative;
    left: 0;
    color: var(--clr-accent);
    font-size: 10px;
    line-height: 15px;
    padding: 10px 10px;
}

/* ========================= PROJECTS ========================= */

.portfolio {
    
}

.portfolio img {
    border-radius: 10px;
    
}
/* ========================= CONTACT ========================= */

.my-contact {
    text-align: center;
    max-width: 600px;
    padding: 150px 0;
    margin: 0 auto 100px;
}

/* ========================= FOOTER ========================= */

.footer__container {
    display: flex;
    width: 100%;
    min-height: 70px;
    -webkit-box-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    align-items: center;
    flex-direction: column;
    background: var(--clr-dark-bg);
    text-align: center;
    padding: 3em;
}
.metadata {
    color: var(--clr-accent);
    font-weight: 500;
    font-size: var(--fs-body);
    font-family: Monaco, monospace;
}
.social-list {
    display: flex;
    justify-content: center;
}
.social-list__link {
    margin: 0 7px;
}
.social-list__item {
    margin: 0 1em;
}
/* ============ IMAGES ============ */
img {
    display: block;
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}
.logo {
    max-width: 100px;
    display: flex;
    vertical-align: middle;
    z-index: 2;
}
.about__img {
    box-shadow: var(--bs);
    padding: .75em;
    -webkit-filter: brightness(65%) sepia(1) hue-rotate(174deg);
    filter: brightness(65%) sepia(1) hue-rotate(174deg);
}
.image-holder img:hover{
    filter: none;
    opacity: 1;
}
.image-holder {
    padding: 1.3em 0 0 .85em;
}

/* ============ LINKS ============ */
a {
    font-size: var(--fs-body);
    font-family: Monaco, monospace;
    font-weight: bold;
    color: var(--clr-accent);
    text-decoration: none;
}
a :hover,
.social-list__link:hover,
.email:hover,
.nav__link:hover,
.nav__resumeButton:hover,
.email_linkWrapper:hover,
.contact-btn:hover {
    opacity: .7;
}

/*   ==================================================
                          MEDIA
     ==================================================   */

@media only screen and (min-width: 1024px), (max-width: 1024px) {
    .main-container {
        padding: 0 120px;
    }
    .intro {
        padding: 10em 3.125em;
    }
    section {
        padding: 7em 4.125em;
    }
}
@media screen and (max-width: 983px) {
    .main-container {
        padding: 0 70px;
    }
}
@media (min-width: 980px) {
    /*  About Section  */
    .about-flexbox {
        display: flex;
        -webkit-box-pack: justify;
        justify-content: space-between;
        -webkit-box-align: center;
        align-items: flex-start;
    }
    .about__img {
        min-width: 250px;
        align-items: center;
    }
}
@media screen and (max-width: 900px) {
    .main-container {
        padding: 0 50px;
    }
    .intro {
        padding: 12em 3.125em;
    }
    section {
        padding: 10em 0;
    }
}
@media screen and (max-width:843px) {
    /* Display hamburger button */
    .nav-toggle {
        display: inline-block;
        z-index: 1000;
    }
    .nav ol {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        position: fixed;
        top: 70px;
        padding: 0 50px;
        width: 100%;
        height: 40vh;
    }
    .nav__resume {
        position: relative;
        display: inline-block;
        margin-top: 15rem;
    }
    .nav {
        display: flex;
        position: fixed;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        background-color: var(--clr-dark-bg);
        padding: 50px;
        width: 41%;
        top: 90px;
        height: 100%;
        right: 0;
        transform: translateX(100%);
        transition: transform 0.5s;
    }
    /*    Styling   */
    .side_styleContainer {
        display: none;
    }
}
@media(min-width: 843px) {
    /* Display navigation links */
    .nav-toggle {
        display: none;
    }
    /*    Styling   */
    .side_styleContainer .email_linkWrapper {
        display: flex;
        position: fixed;
        bottom: 0;
        left: auto;
        right: 40px;
        writing-mode: vertical-rl;
        z-index: 10;
    }
    .side_styleContainer .email_linkWrapper::after {
        content: "";
        display: inline-block;
        width: 1px;
        height: 10em;
        background-color: var(--clr-light);
        margin: 10px auto 0;
    }
    .email_linkWrapper .link {
        color: var(--clr-light);
        font-size: 15px;
    }
}
/* ... */

